force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/BMCServiceDesk__KM_KnowledgeArticle__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpRFKnowledge</customHelpPage>
    <description>Stores data for knowledge articles.</description>
    <label>Knowledge Article</label>
    <nameField>
        <displayFormat>KBA{0}</displayFormat>
        <label>Article ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>