force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Answer__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Answer__c</fullName>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>