force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Article_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Article_Type__c</fullName>
    <formula>IF($RecordType.DeveloperName = &apos;FAQ&apos;, $Label.bmcservicedesk__kmfaq,  
IF($RecordType.DeveloperName = &apos;How_To&apos;, $Label.bmcservicedesk__kmhowto,  
IF($RecordType.DeveloperName = &apos;Known_Error&apos;, $Label.bmcservicedesk__kmknownerror,  
IF($RecordType.DeveloperName = &apos;Problem_Solution&apos;, $Label.bmcservicedesk__kmproblemsolution, $RecordType.Name) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article Type</label>
    <type>Text</type>
</CustomField>