force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Category__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Category__c</fullName>
    <formula>BMCServiceDesk__FKCategory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category~</label>
    <type>Text</type>
</CustomField>