force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Checked_out__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Checked_out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates, if set to check, whether the KA is checked out for editing.</description>
    <label>Checked out</label>
    <type>Checkbox</type>
</CustomField>