force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Closed_Date__c</fullName>
    <label>Retired Date</label>
    <type>DateTime</type>
</CustomField>