force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Error_description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Error_description__c</fullName>
    <label>Error</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>