force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__KA_Account_Links__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__KA_Account_Links__c</fullName>
    <label>Linked Accounts</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>