force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Keywords__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Keywords__c</fullName>
    <label>Keywords</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>