force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Original_Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Original_Knowledge_Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the original KA</description>
    <label>Original Knowledge Article</label>
    <referenceTo>BMCServiceDesk__KM_KnowledgeArticle__c</referenceTo>
    <relationshipLabel>Checked Out Draft Knowledge Article</relationshipLabel>
    <relationshipName>Knowledge_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>