force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Problem__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Problem__c</fullName>
    <label>Problem</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>