force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__PublishedDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PublishedDate__c</fullName>
    <label>Published Date</label>
    <type>DateTime</type>
</CustomField>