force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Question__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Question__c</fullName>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>