force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Relevance__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Relevance__c</fullName>
    <formula>2 * BMCServiceDesk__Used_by_Staff_Members_Count__c  + 2 *  BMCServiceDesk__Used_Count__c  +  0.75 * BMCServiceDesk__View_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relevance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>