force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Review_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Review_Date__c</fullName>
    <label>Review Date</label>
    <type>DateTime</type>
</CustomField>