force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Root_Cause__c</fullName>
    <label>Root Cause</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>