force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Solution__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Solution__c</fullName>
    <label>Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>