force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Used_by_Staff__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Used_by_Staff__c</fullName>
    <description>Total number of times the Knowledge Article is used in Incidents, Problem, Changes by Staff</description>
    <formula>BMCServiceDesk__Used_by_Staff_Members_Count__c  +  BMCServiceDesk__Used_in_Change__c  +  BMCServiceDesk__Used_in_Problem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Used by Staff #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>