force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Used_by_Staff_Members_Count__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Used_by_Staff_Members_Count__c</fullName>
    <label>Used in Incident #</label>
    <summaryForeignKey>BMCServiceDesk__KM_Knowledge_Incident_Link__c.BMCServiceDesk__Knowledge_Article__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>