force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Used_in_Change__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Used_in_Change__c</fullName>
    <description>How many times the Knowledge Article is used in Change by Staff</description>
    <label>Used in Change #</label>
    <summaryForeignKey>BMCServiceDesk__KM_Knowledge_Change_Link__c.BMCServiceDesk__Knowledge_Article__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>