force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Used_in_Problem__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Used_in_Problem__c</fullName>
    <description>How many times the Knowledge Article is used in Problem by Staff</description>
    <label>Used in Problem #</label>
    <summaryForeignKey>BMCServiceDesk__KM_Knowledge_Problem_Link__c.BMCServiceDesk__Knowledge_Article__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>