force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__VideoHeight__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__VideoHeight__c</fullName>
    <defaultValue>360</defaultValue>
    <description>Height of the video in pixels</description>
    <label>Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>