force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__VideoWidth__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__VideoWidth__c</fullName>
    <defaultValue>640</defaultValue>
    <description>Width of the video in pixels</description>
    <label>Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>