force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__View_Count__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__View_Count__c</fullName>
    <label>Viewed in Self Service #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>