force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Visible_in_Self_Service__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Visible_in_Self_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display in Self Service</label>
    <type>Checkbox</type>
</CustomField>