force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/fields/BMCServiceDesk__Workaround__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Workaround__c</fullName>
    <label>Workaround</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>