force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/recordTypes/BMCServiceDesk__FAQ.recordType-meta.xml
<RecordType>
    <fullName>BMCServiceDesk__FAQ</fullName>
    <active>true</active>
    <description>Articles that provide answers to frequently asked questions</description>
    <label>FAQ</label>
</RecordType>