force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/recordTypes/BMCServiceDesk__How_To.recordType-meta.xml
<RecordType>
    <fullName>BMCServiceDesk__How_To</fullName>
    <active>true</active>
    <description>Articles that provide steps to perform a task</description>
    <label>How To</label>
</RecordType>