force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/recordTypes/BMCServiceDesk__Known_Error.recordType-meta.xml
<RecordType>
    <fullName>BMCServiceDesk__Known_Error</fullName>
    <active>true</active>
    <description>Articles that provide information about known errors and workaround, if any</description>
    <label>Known Error</label>
</RecordType>