force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/recordTypes/BMCServiceDesk__Problem_Solution.recordType-meta.xml
<RecordType>
    <fullName>BMCServiceDesk__Problem_Solution</fullName>
    <active>true</active>
    <description>Articles that provide solution to a problem</description>
    <label>Problem Solution</label>
</RecordType>