force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/validationRules/BMCServiceDesk__Category_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Category_Is_Required</fullName>
    <active>true</active>
    <description>User cannot save a record without inserting category</description>
    <errorConditionFormula>(ISBLANK(BMCServiceDesk__FKCategory__c ) || ISNULL(BMCServiceDesk__FKCategory__c )) &amp;&amp; (NOT(ISCHANGED( BMCServiceDesk__Used_by_Staff_Members_Count__c )))</errorConditionFormula>
    <errorDisplayField>BMCServiceDesk__FKCategory__c</errorDisplayField>
    <errorMessage>Please enter the Category.</errorMessage>
</ValidationRule>