force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/validationRules/BMCServiceDesk__CheckedOut_Draft_KA_Status_Cannot_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__CheckedOut_Draft_KA_Status_Cannot_Change</fullName>
    <active>true</active>
    <description>The status of the draft version of a knowledge article cannot be changed.</description>
    <errorConditionFormula>AND(ISCHANGED(BMCServiceDesk__Status__c),AND(Not(ISNULL(BMCServiceDesk__Original_Knowledge_Article__c)),Not(ISBLANK(BMCServiceDesk__Original_Knowledge_Article__c))))</errorConditionFormula>
    <errorDisplayField>BMCServiceDesk__Status__c</errorDisplayField>
    <errorMessage>You cannot change the status of the draft version of a knowledge article.</errorMessage>
</ValidationRule>