force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/validationRules/BMCServiceDesk__Review_date_must_be_a_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Review_date_must_be_a_future_date</fullName>
    <active>true</active>
    <description>Review date must be a future date.</description>
    <errorConditionFormula>AND
(
     BMCServiceDesk__Review_Date__c  &lt;   NOW(), 
     Not(ISCHANGED( BMCServiceDesk__View_Count__c ))   
)</errorConditionFormula>
    <errorDisplayField>BMCServiceDesk__Review_Date__c</errorDisplayField>
    <errorMessage>Review date must be a future date.</errorMessage>
</ValidationRule>