force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/listViews/BMCServiceDesk__Draft_In_Review_Articles.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__Draft_In_Review_Articles</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>BMCServiceDesk__FKCategory__c</columns>
    <columns>BMCServiceDesk__Title__c</columns>
    <columns>BMCServiceDesk__Status__c</columns>
    <columns>BMCServiceDesk__PublishedDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BMCServiceDesk__Status__c</field>
        <operation>equals</operation>
        <value>Draft,In Review</value>
    </filters>
    <label>Draft and In-Review Articles</label>
    <language>en_US</language>
</ListView>