force-app/main/default/objects/BMCServiceDesk__KM_KnowledgeArticle__c/listViews/BMCServiceDesk__Retired_Articles.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__Retired_Articles</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__Article_Type__c</columns>
    <columns>BMCServiceDesk__FKCategory__c</columns>
    <columns>BMCServiceDesk__Title__c</columns>
    <columns>BMCServiceDesk__Status__c</columns>
    <columns>BMCServiceDesk__PublishedDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BMCServiceDesk__Status__c</field>
        <operation>equals</operation>
        <value>Retired</value>
    </filters>
    <label>Retired Articles</label>
    <language>en_US</language>
</ListView>